            - An crash in the configuration of export (when the configured engine was not installed anymore) has been fixed.

  Developers side :
  -----------------

    Non breaking changes :
    ----------------------
        # The widget 'creme_core.forms.header_filter.EntityCellsWidget' has been fixed
          to enable complex HTML representations produced by field printers.


== Version 2.5.4 ==

  Users side :
  ------------
     # Some icons in theme 'icecream' were accidentally passed in greyscale mode with the release <2.5.3>.
     # The style of very long menu entries has been improved.


== Version 2.5.3 ==

  UPGRADE NOTE :
    - You should re-generate the media files (creme generatemedia --settings=[...]).

  Users side :
  ------------
     # Some issues with bad callback URLs on edition views after a bricks reloading have been fixed.
       Note: sadly, this fix makes the context of the visitor mode easier to lost ("Back" in your browser to get it back).
     # In the merge view :
        - There were issues with ManyToMany fields.
        - An error 500 , when one entity did not exist anymore, has been fixed.
     # The listview popup to select new mangers/employees & entity to merge has been fixed :
       now the entities remain filtered even with order or page change.
     # In the theme "Chantilly" :
        - The style of messages for empty blocks was not consistent.
        - An icon "Restore" was missing.
     # Apps :
        * Assistants :
            - The UserMessages not related to an entity were not viewable.
        * Activities :
            - In mass-import, the Calendar selected by default was not always the default Calendar.

  Developers side :
  -----------------

    Non breaking changes :
    ----------------------
        # An issue, when passing an empty array to CheckListSelect widget, has been fixed.
        # A customizable reload URL has been added to EntitiesList views.